[package]
name = "grab"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
directories = "6"
once_cell = "1"
regex = "1"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
